[fix] Change Meme component width on tablets

--- a/src/components/Meme.module.css
+++ b/src/components/Meme.module.css
@@ -72,7 +72,7 @@
 
 @media screen and (max-width: 768px) {
   .meme {
-    width: 60%;
+    width: 70%;
   }
 }
 
